--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
               <a class="nav-link" href="#icons">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#latestwork">Latest Work</a>
+              <a class="nav-link " href="#latestwork">Latest Work</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#services">Our Services</a>
+              <a class="nav-link " href="#services">Our Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#contact">Contact</a>
+              <a class="nav-link " href="#contact">Contact</a>
             </li>
           </ul>
         </div>
